# PyQuifer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: BENCHMARKING_INTEGRATION_AUDIT.md  COMPREHENSIVE_BENCHMARK_PLAN.md  OSCILLATOR_OPTIMIZATION_PLAN.md  PLAN_A_MCP_AS_ORGAN.md  README.md  _module_symbol_inventory.tmp.md  bugs_identified.md  codex_findings.md  codex_findings2.md  codex_findings3.md  codex_findings4.md  codex_findings5.md  complete_neuroscience.md  enhancements_documentation_examples.md  enhancements_modularity_extensibility.md  enhancements_performance.md  enhancements_robustness_generalization.md  enhancements_theoretical_conceptual.md  liquidtoken.md  live_convergent_cognition_architecture.md  live_convergent_epistemic_research_program.md  meta_bottleneck_computational_scalability.md  next_gen_activations.md  novel_concept_active_perception_embodied_ai.md  novel_concept_aha_learning_intrinsic_motivation.md  novel_concept_computational_discovery_of_consciousness.md  novel_concept_dynamic_causal_modeling.md  novel_concept_learning_rules_beyond_backprop.md  novel_concept_linear_oscillatory_state_space_models.md  novel_concept_meta_learning_dynamical_systems.md  novel_concept_neuromorphic_integration.md  novel_concept_oscillatory_multiplexing_temporal_coding.md  novel_concept_oscillatory_neural_networks.md  novel_concept_self_organized_criticality.md  novel_concept_spiking_generative_models.md  randomideas.md  randomideas.neuron_types_notes.bak.md  real_tests.md  reorganization_plan.md  roadmap.md  (+3 more)
docs/sphinx/: Makefile  README.md  conf.py  index.rst  make.bat  requirements.txt
docs/sphinx/modules/: consciousness.rst  dynamics.rst  embodiment.rst  foundation.rst  index.rst  learning.rst  social.rst
examples/: simple_actualization.py
scripts/: measure_neuro_alignment.py  v4_verify.py  verify_reorg.py
specs/001-mizuki-foundation/: spec.md
src/pyquifer/: __init__.py  __main__.py  adapter_manager.py  advanced_spiking.py  appraisal.py  basal_ganglia.py  bridge.py  causal_flow.py  complex_oscillators.py  consciousness.py  continual_learning.py  core.py  criticality.py  deep_active_inference.py  dendritic.py  dendritic_learning.py  developmental.py  diffusion.py  ecology.py  equilibrium_propagation.py  fhrr.py  flash_rnn.py  frequency_bank.py  gated_memory.py  global_workspace.py  hierarchical_predictive.py  hyperdimensional.py  hypernetwork.py  iit_metrics.py  integration.py  kindchenschema.py  learning.py  linoss.py  liquid_networks.py  mcp_organ.py  memory_consolidation.py  metacognitive.py  metastability.py  models.py  motivation.py  (+29 more)
src/pyquifer/_cuda/: __init__.py
src/pyquifer/accel/: __init__.py
src/pyquifer/accel/cuda/: __init__.py  kuramoto_kernel.py
src/pyquifer/api/: __init__.py  bridge.py  legacy.py
src/pyquifer/cognition/: __init__.py
src/pyquifer/cognition/attention/: __init__.py  (+2 more)
src/pyquifer/diagnostics/: __init__.py  neuroscience.py
src/pyquifer/dynamics/: __init__.py  basal_ganglia.py  metastability.py  neuromodulation.py  phase_lock_bus.py  stochastic.py
src/pyquifer/embodiment/: __init__.py  developmental.py  ecology.py  morphology.py  safety.py  social.py  somatic.py  voice.py
src/pyquifer/eval/: neurobench_adapter.py
src/pyquifer/experimental/: __init__.py  fhrr.py  hyperbolic.py  hyperdimensional.py  quantum.py  reservoir.py
src/pyquifer/identity/: __init__.py  adapter_manager.py  consciousness.py  hypernetwork.py  iit_metrics.py  neural_darwinism.py  self_model.py  strange_attractor.py
src/pyquifer/learning/: __init__.py  consolidation.py  continual.py  dendritic.py  dendritic_learning.py  equilibrium_prop.py  prospective.py  stp.py  synaptic.py
src/pyquifer/memory/: __init__.py  cls.py  diffusion.py  gated_memory.py  generative_world_model.py  latent_world_model.py  perturbation.py  potentials.py
src/pyquifer/runtime/: __init__.py  confidence_tracker.py  config.py  criticality_feedback.py  cycle.py  tick_result.py
src/pyquifer/workspace/: __init__.py  broadcast.py  competition.py  ensemble.py  organ_base.py  organ_mcp.py  workspace.py
tests/: conftest.py  generate_visualizations.py  test_basal_ganglia.py  test_behavioral.py  test_bridge.py  test_causal_flow.py  test_epistemic_value.py  test_eval_harness.py  test_hierarchical_predictive.py  test_iit_metrics.py  test_imports.py  test_integration.py  test_integration_cycle.py  test_mcp_organ.py  test_memory_consolidation.py  test_metabolic_budget.py  test_metastability.py  test_models_closed_loop.py  test_neural_darwinism.py  test_neuro_validation.py  test_organ.py  test_penrose_chess.py  test_phase10.py  test_phase11_foundations.py  test_phase12_14_perception_memory.py  test_phase15_18_reasoning_hardware.py  test_phase5_integration.py  test_phase5a.py  test_phase5b.py  test_phase5c.py  test_phase5d.py  test_phase6b_fixes.py  test_phase7_improvements.py  test_phase8_training.py  test_phase_lock_bus.py  test_precision_coupling.py  test_precision_weighting.py  test_provenance_budget_confidence.py  test_self_model.py  test_stochastic_resonance.py  (+2 more)
tests/benchmarks/: BENCHMARK_REVIEW.md  CLEANUP_PLAN.md  ENHANCEMENT_PLAN.md  README.md  VENDOR_MANIFEST.md  akorn_comparison_results.json  bench_akorn_comparison.py  bench_alphagenome.py  bench_beir.py  bench_bifurcation.py  bench_bigcode_eval.py  bench_chess.py  bench_chessqa.py  bench_consciousness.py  bench_continual.py  bench_cycle.py  bench_dm_control.py  bench_efficiency.py  bench_emergent_comm.py  bench_ep_training.py  bench_factbench.py  bench_factreasoner.py  bench_factscore.py  bench_formal_conj.py  bench_gymnasium.py  bench_hanabi.py  bench_harmbench.py  bench_helm_eval.py  bench_jailbreakbench.py  bench_lava.py  bench_llm_ab.py  bench_lm_eval.py  bench_lmms_eval.py  bench_local_rules.py  bench_meltingpot.py  bench_mlperf.py  bench_mmmu.py  bench_modules.py  bench_mteb.py  bench_neurodiscovery.py  (+45 more)
tests/validation/: __init__.py  validate_active_inference.py  validate_kuramoto.py  validate_predictive_coding.py  validate_transfer_entropy.py
(+45 files in other folders)
