[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquifer"
version = "0.1.0"
description = "A PyTorch library for oscillatory consciousness, embodied cognition, and ethics as physics."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "takku1" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Private :: Do Not Upload",
]
dependencies = [
    "torch>=2.0.0",
    "numpy",
]

[project.optional-dependencies]
datascience = [
    "pandas",
    "scikit-learn>=1.2",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "myst-parser>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.2.0",
    "matplotlib>=3.5.0",
]
adapters = [
    "peft>=0.7.0",
]
compile = [
    "triton-windows>=3.6.0; sys_platform == 'win32'",
    "triton>=3.0.0; sys_platform == 'linux'",
]

[project.urls]
"Homepage" = "https://github.com/takku1/PyQuifer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyquifer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = [
    # Scientific/ML naming conventions: uppercase matrix/tensor variables are standard
    "N803",   # argument name should be lowercase (K, N, A, B, R, Psi, tau_E etc.)
    "N802",   # function name should be lowercase (Z, R, Psi — property-style accessors)
    "N806",   # non-lowercase variable in function (X, H, A, B — tensor/matrix notation)
    "N812",   # lowercase imported as non-lowercase (import nn.functional as F is idiomatic)
    "N815",   # mixed-case variable in class scope (mathematical notation)
    "E741",   # ambiguous variable names (l=loss, I=identity are standard in ML)
    # Unused variables: tensor shape unpacking (B, T, D = x.shape) is idiomatic
    "F841",
    # Line-too-long: scientific formulas and comments legitimately exceed 100 chars
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# __init__.py files re-export symbols — F401 is expected
"__init__.py" = ["F401"]
# Availability checks inside try/except blocks look unused to ruff
"flash_rnn.py" = ["F401"]
